Add disqus button

--- a/post.hbs
+++ b/post.hbs
@@ -76,6 +76,7 @@
 
       {{! Disqus comments container }}
       <div id="disqus_thread">
+        <button class="show-comments btn--full-width" id="show-comments" onclick="loadComments();"><a href="{{url}}#disqus_thread">Load Comments</a></button>
         <script type="text/javascript">
 
           // EDIT THIS LINE!
